<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="#fff"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:fadeScrollbars="true"
        android:scrollbars="none"
        android:background="@color/register_bk_color">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/register_top">

                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="45sp"
                    android:id="@+id/appname"
                    android:fontFamily="@font/blacklist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/logo"
                    android:text="@string/app_name"
                    android:layout_marginBottom="20dp"
                    android:layout_centerHorizontal="true" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        style="@style/viewParent.headerText.NoMode"
                        android:textColor="@color/whiteTextColor"
                        android:text="Here’s\nyour first\nstep with \nus! " />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:background="@color/register_bk_color"
                        android:src="@drawable/ic_register_hero" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_inputs">


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:cardBackgroundColor="@color/whiteTextColor"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginTop="50dp"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textInputName"
                                style="@style/parent"
                                android:layout_marginTop="@dimen/loginViewsMargin">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/name"
                                    style="@style/modifiedEditText"
                                    android:inputType="textPersonName"
                                    android:textSize="18sp"
                                    android:maxLines="1"
                                    android:hint="Name" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textInputEmail"
                                style="@style/parent"
                                android:layout_marginTop="@dimen/loginViewsMargin">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/email"
                                    style="@style/modifiedEditText"
                                    android:inputType="textEmailAddress"
                                    android:textSize="18sp"
                                    android:maxLines="1"
                                    android:hint="@string/login_email_hint" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textInputMobile"
                                style="@style/parent"
                                android:layout_marginTop="@dimen/loginViewsMargin">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/number"
                                    style="@style/modifiedEditText"
                                    android:inputType="phone"
                                    android:textSize="20sp"
                                    android:maxLines="1"
                                    android:hint="Mobile Number" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textInputPassword"
                                style="@style/parent"
                                android:layout_marginTop="@dimen/loginViewsMargin">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/password"
                                    style="@style/modifiedEditText"
                                    android:hint="@string/login_password_hint"
                                    android:maxLines="1"
                                    android:textSize="18sp"
                                    android:inputType="textPassword" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textInputConfirmPassword"
                                style="@style/parent"
                                android:layout_marginTop="@dimen/loginViewsMargin">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/confirmpassword"
                                    style="@style/modifiedEditText"
                                    android:hint="@string/login_confirm_password_hint"
                                    android:maxLines="1"
                                    android:textSize="18sp"
                                    android:inputType="textPassword" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                                android:id="@+id/registerButton"
                                style="@style/loginButton"
                                app:spinning_bar_width="4dp"
                                app:spinning_bar_color="#FFF"
                                android:text="Register"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/loginViewsMargin"
                                app:initialCornerAngle="27dp"
                                app:spinning_bar_padding="6dp" />

                            <TextView
                                style="@style/parent"
                                android:id="@+id/login_now"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                android:textColor="@color/themeColor"
                                android:textSize="17sp"
                                android:text="Already have an account?"
                                android:layout_marginTop="@dimen/loginViewsMargin" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                </RelativeLayout>
            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/back_to_login"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_register_back_big_img"
        android:src="@drawable/ic_register_back_fore_img"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false" />

</RelativeLayout>

